# lodge

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  configure  docker-compose.yml  index.html  lodge.pro  main.pro  proper_test.srt  sub.srt
app/: CMakeLists.txt
app/src/: lodge.cpp
bridge/: CMakeLists.txt
bridge/include/: ffmpeg_connector.h  movest_algo.h
bridge/src/: ffmpeg_connector.cpp  movest_algo.cpp
cmake/: FindFFmpeg.cmake
extras/samples/: README.md
extras/samples/city/: Aerial Shot Of City.avi
extras/samples/night/: Time Lapse Video Of Night Sky.avi  subtitle.srt
extras/samples/subtitles/: got_s01e01.srt  got_s01e25.srt  proper_test.srt  test_file.srt
gui/: BackButton.qml  CMakeLists.txt  DecodeView.qml  EncodeView.qml  FileLoader.qml  Subtitle.qml  SubtitleForm.ui.qml  SubtitleView.qml  backend.cpp  backend.h  main.cpp  main.qml  mcneil.peter.lodge.yml  qml.qrc
gui/qml/: BackButton.qml  DecodeView.qml  EncodeView.qml  FileLoader.qml  StackScene.qml  SubtitleView.qml  decodeView.qml  encodeView.qml  subtitleDecision.qml  subtitleView.qml  videoTranscription.qml
gui/qml/dummydata/context/: EncodeView.qml  StackScene.qml
gui/resources/: Info.plist  icon.icns
gui/src/: backend.cpp  backend.h  main.cpp
include/: CMakeLists.txt
include/catch/: CMakeLists.txt  catch.hpp
lib/: CMakeLists.txt
lib/include/: encoder.h  frame_header.h  subtitle.h  video.h
lib/src/: frame_header.cpp  subtitle.cpp  video.cpp
lib/test/: CMakeLists.txt
lib/test/src/: TestEncoder.cpp  TestMain.cpp  TestSubtitleFile.cpp  TestVideoFile.cpp
resources/: README.md
resources/subtitles/: ebutt.xml  timedtext.xml
samples/: README.md
scripts/: dependencies.sh  qt.sh
src/: CMakeLists.txt  Encoder.cpp  Encoder.h  Main.cpp  SubtitleFile.cpp  SubtitleFile.h  VideoFile.cpp  VideoFile.h  encoder.h  fact.cpp  frame_header.cpp  frame_header.h  lodge.cpp  main.cpp  subtitle.cpp  subtitle.h  video.cpp  video.cpp.autosave  video.h
test/: CMakeLists.txt  TestEncoder.cpp  TestMain.cpp  TestSubtitleFile.cpp  TestVideoFile.cpp
