project(lodge_lib)

set (LIBRARY_MODULE_PATH "${CMAKE_SOURCE_DIR}/lib")
set (LIBRARY_SRC_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/src" )
set (LIBRARY_INCLUDE_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/include")
set (LIBRARY_INCLUDE_PATH ${LIBRARY_INCLUDE_PATH} PARENT_SCOPE)

include_directories (${LIBRARY_INCLUDE_PATH})

file (GLOB LIB_HEADER_FILES "${LIBRARY_INCLUDE_PATH}/*.h")
file (GLOB LIB_SOURCE_FILES "${LIBRARY_SRC_PATH}/*.cpp")

find_package(FFmpeg REQUIRED)
add_library (${PROJECT_NAME} STATIC ${LIB_SOURCE_FILES} ${LIB_HEADER_FILES} ${Boost_INCLUDE_DIRS} ${Boost_LIBRARY_DIRS} ${FFMPEG_INCLUDE_DIR})

enable_testing()
add_subdirectory (test)